--- a/aula30_exercise_teacher/index.html
+++ b/aula30_exercise_teacher/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <section class="container">
-        <h1 id="data-atual">Título</h1>
+        <h1>Título</h1>
         </section>
     <script src="./assets/js/main.js"></script>
 </body>
