--- a/Sections/AulasSection4/aula57_calculadora/index.html
+++ b/Sections/AulasSection4/aula57_calculadora/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="container">
-        <h1>Calculadora</h1>
+        <h1>CALCULADORA</h1>
         <table class="calculadora">
         <tr>
             <td colspan="4"><input type="text" class="display"></td>
